# papas-burgueria-django-backend

./: .env-exemplo  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
papasburgueria/: admin.py  apps.py
papasburgueria/migrations/: 0001_initial.py  0002_compra.py  0002_ingrediente_rename_refrigerantes_refrigerante_and_more.py  0002_initial.py  0003_alter_refrigerante_descricao.py  0003_itenscompra.py  0003_remove_itenscomanda_bebida_and_more.py  0004_alter_hamburguer_ingredientes_and_more.py  0004_bebida_tipo.py  0004_rename_refrigerante_bebida_and_more.py  0005_bebida_imagem_hamburguer_image_ingrediente_imagem.py  0005_hamburguer_avaliacao_remove_hamburguer_ingredientes_and_more.py  0006_alter_hamburguer_ingredientes.py  0006_rename_image_hamburguer_imagem.py
papasburgueria/models/: __init__.py  bebida.py  comanda.py  compras.py  hamburguer.py  ingrediente.py  ingredientes.py  lucro.py  refrigerante.py  refrigerantes.py
papasburgueria/serializers/: __init__.py  bebida.py  comanda.py  compra.py  hamburguer.py  ingrediente.py  lucro.py  refrigerante.py
papasburgueria/views/: __init__.py  bebida.py  comanda.py  compra.py  hamburguer.py  ingrediente.py  lucro.py  refrigerante.py
uploader/migrations/: 0001_initial.py  0002_image_nome.py  0003_remove_image_nome.py
usuario/: admin.py  models.py  serializers.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py
