[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabriela Saraiva Soares", email = "gabrielasaraiva.04@gmail.com"},
]
dependencies = [
    "django>=4.2.6",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.2.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=68.1.2",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
    "python-magic>=0.4.27",
    "Pillow>=10.0.1",
    "netifaces>=0.11.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

